# compression_tool

./: README.md  pyproject.toml
compression_tool/: main.py
src/: huffman_tree.py  main.py  serialize.py
tests/: test_huffman_tree.py  test_main.py  test_prefix_code_table.py  test_serialize.py
