[tool.poetry]
name = "compression_tool"
version = "0.1.0"
description = ""
authors = ["Stefani <stefanigtorres@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dev.dependencies]
mypy = "^1.14.1"
ruff = "^0.9.3"
pytest = "^8.3.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
compression_tool = "compression_tool.main:_cli"
